Fixing wrapping issue in headers

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -100,6 +100,7 @@
   text-shadow: 10px 10px 14px rgba(0, 0, 0, 0.7) !important; /* More visible shadow */
   color: #ffffff; /* Ensure the text color is white */
   margin-bottom: 20px; /* Add some spacing below the title */
+  white-space: nowrap;
 }
 
 .page-heading .subheading {
